# mv64e-mtb-dto-python

./: LICENSE  pyproject.toml  readme.md
mv64e_dto/: __init__.py  address.py  age.py  atc_unregistered_medication_coding.py  base_variant_localization_coding.py  base_variant_localization_coding_code.py  brcaness.py  care_plan_no_sequencing_performed_reason_coding.py  chromosome.py  claim.py  claim_response.py  claim_response_status_coding.py  claim_response_status_coding_code.py  claim_response_status_reason_coding.py  claim_response_status_reason_coding_code.py  claim_stage_coding.py  claim_stage_coding_code.py  clin_var_coding.py  clin_var_coding_code.py  cnv.py  cnv_coding.py  cnv_coding_code.py  coding.py  collection.py  components.py  confidence_range.py  consent_provision.py  dna_fusion.py  dna_fusion_fusion_partner3_prime.py  dna_fusion_fusion_partner5_prime.py  ecog_coding.py  ecog_coding_code.py  end_range.py  external_id_system.py  family_member_history.py  family_member_history_relationship_type_coding.py  family_member_history_relationship_type_coding_code.py  follow_up.py  follow_up_patient_status_coding.py  follow_up_patient_status_coding_code.py  (+138 more)
tests/: test_address.py  test_age.py  test_atc_unregistered_medication_coding.py  test_base_variant_localization_coding.py  test_base_variant_localization_coding_code.py  test_care_plan_no_sequencing_performed_reason_coding.py  test_chromosome.py  test_claim.py  test_claim_response.py  test_claim_response_status_coding.py  test_claim_response_status_coding_code.py  test_claim_response_status_reason_coding.py  (+85 more)
